# glowing-doodle

./: .gitignore  README.md  main.c  main.py  requirements.txt
crc32/: MANIFEST  MANIFEST.in  Makefile  __init__.py  libcrc32.c  libcrc32.h  setup.py
crc32/pkg/: MANIFEST.in  README.md  crc32-0.1-py2.py3-none-any.whl  setup.cfg
crc32/pkg/crc32.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
crc32/tests/: base.c  expected_table.txt
