[metadata]
name = crc32
author = Clopping Emu
author_email = cloppingemu@gmail.com
version = attr: crc32.__version__
description = An example module combining sources
long_description = file: README.md
long_description_content_type = text/x-rst
keywords = hashing
license = Mozilla Public License Version 2.0
home_page = https://github.com/cloppingemu/glowing-doodle
project_urls =
    Issue Tracker = https://github.com/cloppingemu/glowing-doodle/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Hashing
    Topic :: Utilities

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    resources-example = crc32:main

[bdist_wheel]
universal = 1
